--- a/dash_app/requirements.txt
+++ b/dash_app/requirements.txt
@@ -2,3 +2,8 @@ dash==2.1.0
 plotly==5.5.0
 gunicorn==20.1.0
 Flask==2.0.2
+python-dotenv==0.19.2
+dash_daq==0.5.0
+dash-table==5.0.0
+pandas==1.4.0
+xlrd==2.0.1
