--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,8 @@ dash-table==5.0.0
 pandas==1.4.0
 xlrd==2.0.1
 statsmodels==0.13.1
+fpdf==1.7.2
+kaleido==0.2.1
+df2img==0.2.4
+ipython==8.0.1
+nbformat==5.1.3
